<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.menu.Login">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/loginbtn"
            android:layout_width="234dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:ems="5"
            android:text="@string/log_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_pass" />

        <TextView
            android:id="@+id/txtSignup"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="24dp"
            android:text="@string/not_registered"
            android:textColor="#7750BD"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginbtn" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="275dp"
            android:layout_height="223dp"
            android:layout_marginTop="84dp"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.446"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

        <EditText
            android:id="@+id/login_pass"
            android:layout_width="216dp"
            android:layout_height="47dp"
            android:layout_marginTop="4dp"
            android:background="#ffffff"
            android:drawableStart="@drawable/password"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_username"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/login_username"
            android:layout_width="215dp"
            android:layout_height="44dp"
            android:layout_marginTop="63dp"
            android:background="#ffffff"
            android:drawableStart="@drawable/username"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            android:importantForAutofill="no" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>